<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical" app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:text="@string/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:textSize="50sp"
                android:gravity="center" android:paddingTop="50dp"/>
        <Button
                android:text="@string/keep_going"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/keep_going" android:textSize="24sp"
                android:layout_gravity="center" android:layout_marginTop="70dp" android:minWidth="200dip"
                android:minHeight="50dip" android:maxHeight="50dip" android:onClick="buttonLink"
                android:visibility="gone"/>
        <Button
                android:text="@string/new_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/new_game" android:textSize="24sp"
                android:layout_gravity="center" android:layout_marginTop="70dp" android:minWidth="200dip"
                android:minHeight="50dip" android:maxHeight="50dip" android:onClick="buttonLink"/>
        <Button
                android:text="@string/records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/records" android:textSize="24sp"
                android:layout_gravity="center" android:layout_marginTop="70dp" android:minWidth="200dip"
                android:minHeight="50dip" android:maxHeight="50dip" android:onClick="buttonLink"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>